<resources>
    <string name="app_name">OneNote2025</string>
    <string name="login">Login</string>
    <string name="signed_in">Signed-In</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="show_location">Show location</string>
    <string name="saved">Saved</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_message">Do you really want to delete this note?</string>
    <string name="location">Location</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete_confirmation_title">Delete Note</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this note?</string>
</resources>